# bilingual

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPLETION_REPORT.md  DATA_COLLECTION_GUIDE.md  Dockerfile  GEMINI.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE_SUMMARY.txt  INDEX.md  MANIFEST.in  MONITORING_FEEDBACK.md  Makefile  Makefile.wiki  NEXT_STEPS.md  PROJECT_COMPLETE.txt  PROJECT_STATUS.md  PROMPTS.md  README.md  README_FIRST.md  README_HUGGINGFACE.md  README_WIKIPEDIA.md  ROADMAP.md  SUMMARY.md  TODO_PRODUCTION.md  VSCode_Extension_Development_Plan.md  coverage.xml  deploy.sh  docker-compose.yml  mkdocs.yml  package.json  pyproject.toml  pytest.ini  release.sh  requirements-dev.txt  requirements.txt  run_tests.sh  test_results.json  tsconfig.json  (+2 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  docs.yml  huggingface_publish.yml  publish_models.yml  test_all_models.yml  test_hf_model.yml  test_literary.yml  test_literary_models.yml  test_models.yml  test_semantic_models.yml  test_wikipedia.yml
bilingual/: __init__.py  api.py  cli.py  config.py  data_augmentation.py  data_utils.py  evaluation.py  human_evaluation.py  language_detection.py  multi_input.py  normalize.py  onnx_converter.py  server.py  testing.py  tokenizer.py  transformer_models.py
bilingual/models/: lm.py  loader.py  translate.py
cards/: bilingual_lm_card.md  cross-lingual-embed_card.md  dataset_card.md  language_model_card.md  literary-lm_card.md  metaphor-simile-detector_card.md  named-entity-recognizer_card.md  poetic-meter-detector_card.md  readability_classifier_card.md  sentiment-tone-classifier_card.md  style-transfer-gpt_card.md  tokenizer_model_card.md  translation_model_card.md
config/: preprocessing.yaml  train.yaml
data/cleaned/: parallel_corpus.jsonl
data/evaluations/: evaluations.jsonl  report.json
data/filtered/: parallel_corpus.jsonl
datasets/: README.md
datasets/enhanced/: enhanced_data.jsonl
datasets/processed/: README.md  workflow_stats.json
datasets/regional/: bangla_dialects.jsonl
datasets/wikipedia/: CHECKLIST.md  PROGRESS.md  README.md  dataset_meta.json
docs/: ANNOTATION_GUIDELINES.bn.md  ANNOTATION_GUIDELINES.md  API_REFERENCE.bn.md  API_REFERENCE.md  ARCHITECTURE.bn.md  ARCHITECTURE.md  CHANGELOG.bn.md  CHANGELOG.md  CODE_OF_CONDUCT.bn.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.bn.md  COMPLETION_REPORT.md  CONTRIBUTING.bn.md  CONTRIBUTING.md  DATASET_CARD_TEMPLATE.bn.md  DATASET_CARD_TEMPLATE.md  DEVELOPER_GUIDE.bn.md  DEVELOPER_GUIDE.md  MODEL_CARD_TEMPLATE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  QUICKSTART.md  README.md  README_FIRST.md  RELEASE_ANNOUNCEMENT.md  RELEASE_v1.1.0.md  ROADMAP.md  SETUP.md  SUMMARY.md  getting-started.bn.md  getting-started.md  index.bn.md  index.md  requirements.txt  rotary_positional_embedding.md
docs/api/: index.bn.md  index.md
docs/bn/: README.md  quickstart.md
docs/en/: README.md  quickstart.md
docs/examples/: index.bn.md  index.md  wikipedia_lm_usage.md
docs/guides/: QUICKSTART_HUGGINGFACE.md  QUICKSTART_SCAFFOLD.md  TESTING_GUIDE.md  deployment_guide.md
docs/project/: ANNOTATION_GUIDELINES.md  CHANGELOG.md  CONTRIBUTOR_ONBOARDING.md  DATA_COLLECTION_GUIDE.md  GETTING_STARTED.md  MYPY_FIXES.md  NEXT_STEPS.md  PRODUCTION_DEPLOYMENT.md  PROJECT_COMPLETE.txt  PROJECT_MAP.md  PROJECT_STATUS.md
examples/: IMPLEMENTATION_SUMMARY.md  NOTEBOOK_GUIDE.md  QUICKSTART_NOTEBOOK.md  README.md  basic_usage.py  bilingual_tutorial.ipynb  train_language_model.py  wikipedia_lm_example.py
mlops/training/: train_classifier.py  train_literary_models.py  train_lm.py  train_style_transfer.py  train_tokenizer.py  train_wiki_lm.py
models/bilingual-lm/: added_tokens.json  eval_metrics.json  tokenizer_config.json  training_args.json  training_metrics.json
models/cross-lingual-embed/: config.json
models/literary-lm/: config.json  training_args.json
models/metaphor-simile-detector/: task_config.json
models/named-entity-recognizer/: task_config.json
models/poetic-meter-detector/: task_config.json
models/readability-classifier/: README.md  eval_results.json  task_config.json  training_args.json
models/sentiment-tone-classifier/: task_config.json
models/style-transfer-gpt/: config.json
models/text-complexity-predictor/: task_config.json
models/tokenizer/: bilingual_sp.vocab  tokenizer.vocab
notebooks/: create_notebook.py
results/: benchmark.json  classification_eval.json  evaluation.json  readability_eval.json
scripts/: align_bilingual_wiki.py  analyze_wiki_dataset.py  benchmark_models.py  cli.py  collect_data.py  collect_regional_data.py  commit_messages.py  data_workflow.py  dataset_manager.py  download_wiki.py  enhance_dataset.py  evaluate.py  evaluate_literary.py  evaluate_models.py  evaluate_semantic.py  evaluate_wiki_lm.py  generate_bn_docs.py  generate_release_notes.py  github_labels.py  monitor_wiki_extraction.py  organize_docs.py  pii_detection.py  pre-commit-hook.py  predict_metaphors.py  prepare_data.py  prepare_hf_dataset.py  preprocess_datasets.py  preprocess_literary.py  preprocess_wiki.py  project_review.py  pypi_release.py  pypi_release.sh  quality_filter.py  quickstart_wikipedia.sh  requirements-datasets.txt  setup_model.py  setup_pypi.sh  setup_wikipedia.sh  test_dataset_loading.py  test_evaluation.py  (+10 more)
scripts/huggingface/: add_hf_badges.py  create_demo.py  generate_all_model_cards.py  generate_model_card.py  generate_model_redability_card.py  prepare_model.py  publish_all.sh  publish_dataset.py  publish_multi_models.sh  test_hf_model.py  upload_model.py  validate_publish_readiness.py
src/: extension.ts
src/bilingual/: __init__.py  _version.py  api.py  cli.py  collect_data.py  config.py  data_augmentation.py  data_utils.py  evaluation.py  exceptions.py  multi_input.py  onnx_converter.py  server.py  testing.py  tokenizer.py
tests/: __init__.py  test_api.py  test_api_validation.py  test_data_utils.py  test_normalize.py  test_rope.py  test_tokenizer.py
torch/: __init__.py
(+73 files in other folders)
