[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bilingual"
version = "1.0.0"
description = "High-quality Bangla and English NLP toolkit for production use"
readme = "docs/README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "KhulnaSoft Ltd", email = "info@khulnasoft.com"}
]
maintainers = [
    {name = "KhulnaSoft Ltd", email = "info@khulnasoft.com"},
    {name = "Md Sulaiman", email = "dev.sulaiman@icloud.com"}
]
keywords = [
    "nlp", "bangla", "bengali", "bilingual", "multilingual",
    "tokenization", "translation", "language-model", "ai", "machine-learning"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.20.0",
    "sentencepiece>=0.1.96",
    "regex>=2021.0.0",
    "tqdm>=4.62.0",
    "requests>=2.26.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "peft>=0.5.0",
    "bitsandbytes>=0.41.0",
]
onnx = [
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "optimum>=1.12.0",
]
monitoring = [
    "prometheus-client>=0.17.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.17.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-i18n>=0.1.0",
    "mkdocstrings[python]>=0.20.0",
]
all = [
    "bilingual[torch,onnx,monitoring,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/kothagpt/bilingual"
Documentation = "https://bilingual.readthedocs.io"
Repository = "https://github.com/kothagpt/bilingual"
Issues = "https://github.com/kothagpt/bilingual/issues"
Changelog = "https://github.com/kothagpt/bilingual/releases"
"Source Code" = "https://github.com/kothagpt/bilingual"
"Bug Reports" = "https://github.com/kothagpt/bilingual/issues"

[project.scripts]
bilingual = "scripts.cli:run_cli"
bilingual-server = "bilingual.server:run_server"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.package-data]
bilingual = ["py.typed", "models/bilingual-tokenizer.vocab"]

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools_scm]
write_to = "src/bilingual/_version.py"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = ["__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sentencepiece.*",
    "transformers.*",
    "sacrebleu.*",
    "rouge_score.*",
    "sklearn.*",
    "onnx.*",
    "onnxruntime.*",
    "fastapi.*",
    "uvicorn.*",
    "pydantic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src/bilingual",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/bilingual"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
